[package]
name = "rustful-api"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "An easy way to create and start a RESTful API without worrying about a lot of boilerplate code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
